--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = uctt
-version = 0.3.0
+version = 0.3.1
 description = Universal cluster testing toolkit
 long_description = file: README.md
 long_description_content_type = text/markdown
@@ -37,20 +37,25 @@ packages =
     uctt.contrib.terraform
 include_package_data = True
 install_requires =
-    configerus==0.2.1
+    configerus==0.2.3
     appdirs
     pyyaml
     docker
     kubernetes==17.14.0a1
 
-[options.entry_points]
-uctt.bootstrap =
-    uctt_common      = uctt.contrib.common:uctt_bootstrap
-    uctt_docker      = uctt.contrib.docker:uctt_bootstrap
-    uctt_dummy       = uctt.contrib.dummy:uctt_bootstrap
-    uctt_kubernetes  = uctt.contrib.kubernetes:uctt_bootstrap
-    uctt_terraform   = uctt.contrib.terraform:uctt_bootstrap
+[options.packages.find]
+where=src
 
-[options.extras_require]
-testing =
-    pytest
+[options.entry_points]
+configerus.bootstrap =
+    uctt_common      = uctt.contrib.common:bootstrap
+    uctt_docker      = uctt.contrib.docker:bootstrap
+    uctt_dummy       = uctt.contrib.dummy:bootstrap
+    uctt_kubernetes  = uctt.contrib.kubernetes:bootstrap
+    uctt_terraform   = uctt.contrib.terraform:bootstrap
+uctt.bootstrap =
+    uctt_common      = uctt.contrib.common:bootstrap
+    uctt_docker      = uctt.contrib.docker:bootstrap
+    uctt_dummy       = uctt.contrib.dummy:bootstrap
+    uctt_kubernetes  = uctt.contrib.kubernetes:bootstrap
+    uctt_terraform   = uctt.contrib.terraform:bootstrap
