--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,2 @@
 # Include potential config or functional files from contrib
-recursive-include uctt/contrib/*
-# remove any stuff we don't want (I find that this doesn't work well)
-prune .git .terraform __pycache__ *.py[ocd]
+recursive-include uctt/contrib/*/config *.json *.yml *.yaml
