constructors now base on config over dict
- also bump version and configerus version bumping

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = uctt
-version = 0.3.1
+version = 0.3.2
 description = Universal cluster testing toolkit
 long_description = file: README.md
 long_description_content_type = text/markdown
@@ -37,8 +37,7 @@ packages =
     uctt.contrib.terraform
 include_package_data = True
 install_requires =
-    configerus==0.2.3
-    appdirs
+    configerus>=0.2.4
     pyyaml
     docker
     kubernetes==17.14.0a1
