added the ucttc cli
Signed-off-by: James Nesbitt <jnesbitt@mirantis.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = uctt
-version = 0.4.1
+version = 0.4.2
 description = Universal cluster testing toolkit
 long_description = file: README.md
 long_description_content_type = text/markdown
@@ -30,6 +30,7 @@ project_urls =
 [options]
 packages =
     uctt
+    uctt.contrib.cli
     uctt.contrib.common
     uctt.contrib.dummy
     uctt.contrib.docker
@@ -46,6 +47,8 @@ install_requires =
 where=src
 
 [options.entry_points]
+console_scripts=
+    ucttc   = uctt.contrib.cli.entrypoint:main
 configerus.bootstrap =
     uctt_common      = uctt.contrib.common:bootstrap
     uctt_docker      = uctt.contrib.docker:bootstrap
@@ -54,6 +57,7 @@ configerus.bootstrap =
     uctt_terraform   = uctt.contrib.terraform:bootstrap
 uctt.bootstrap =
     uctt_common      = uctt.contrib.common:bootstrap
+    uctt_cli         = uctt.contrib.cli:bootstrap
     uctt_docker      = uctt.contrib.docker:bootstrap
     uctt_dummy       = uctt.contrib.dummy:bootstrap
     uctt_kubernetes  = uctt.contrib.kubernetes:bootstrap
