--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = uctt
-version = 0.4.3
+version = 0.5.0
 description = Universal cluster testing toolkit
 long_description = file: README.md
 long_description_content_type = text/markdown
@@ -30,7 +30,7 @@ project_urls =
 [options]
 packages =
     uctt
-    uctt.contrib.cli
+    uctt_cli
     uctt.contrib.common
     uctt.contrib.dummy
     uctt.contrib.docker
@@ -38,7 +38,7 @@ packages =
     uctt.contrib.terraform
 include_package_data = True
 install_requires =
-    configerus>=0.3.2
+    configerus>=0.3.3
     pyyaml
     docker
     kubernetes==17.14.0a1
@@ -48,7 +48,7 @@ where=src
 
 [options.entry_points]
 console_scripts=
-    ucttc   = uctt.contrib.cli.entrypoint:main
+    ucttc   = uctt_cli.entrypoint:main
 configerus.bootstrap =
     uctt_common      = uctt.contrib.common:bootstrap
     uctt_docker      = uctt.contrib.docker:bootstrap
@@ -56,8 +56,8 @@ configerus.bootstrap =
     uctt_kubernetes  = uctt.contrib.kubernetes:bootstrap
     uctt_terraform   = uctt.contrib.terraform:bootstrap
 uctt.bootstrap =
+    uctt_cli         = uctt_cli:bootstrap
     uctt_common      = uctt.contrib.common:bootstrap
-    uctt_cli         = uctt.contrib.cli:bootstrap
     uctt_docker      = uctt.contrib.docker:bootstrap
     uctt_dummy       = uctt.contrib.dummy:bootstrap
     uctt_kubernetes  = uctt.contrib.kubernetes:bootstrap
