--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = uctt
-version = 0.5.0
+version = 0.5.1
 description = Universal cluster testing toolkit
 long_description = file: README.md
 long_description_content_type = text/markdown
@@ -32,6 +32,7 @@ packages =
     uctt
     uctt_cli
     uctt.contrib.common
+    uctt.contrib.ansible
     uctt.contrib.dummy
     uctt.contrib.docker
     uctt.contrib.kubernetes
@@ -49,15 +50,10 @@ where=src
 [options.entry_points]
 console_scripts=
     ucttc   = uctt_cli.entrypoint:main
-configerus.bootstrap =
-    uctt_common      = uctt.contrib.common:bootstrap
-    uctt_docker      = uctt.contrib.docker:bootstrap
-    uctt_dummy       = uctt.contrib.dummy:bootstrap
-    uctt_kubernetes  = uctt.contrib.kubernetes:bootstrap
-    uctt_terraform   = uctt.contrib.terraform:bootstrap
 uctt.bootstrap =
     uctt_cli         = uctt_cli:bootstrap
     uctt_common      = uctt.contrib.common:bootstrap
+    uctt_ansible     = uctt.contrib.ansible:bootstrap
     uctt_docker      = uctt.contrib.docker:bootstrap
     uctt_dummy       = uctt.contrib.dummy:bootstrap
     uctt_kubernetes  = uctt.contrib.kubernetes:bootstrap
