general cleanup for release:
1. jsonschema validation for a number of from config fixtures
2. docs rewrite
3. cli conformity and features improvements.

Signed-off-by: James Nesbitt <jnesbitt@mirantis.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = uctt
-version = 0.5.2
+version = 0.5.4
 description = Universal cluster testing toolkit
 long_description = file: README.md
 long_description_content_type = text/markdown
@@ -39,10 +39,11 @@ packages =
     uctt.contrib.terraform
 include_package_data = True
 install_requires =
-    configerus>=0.3.4
+    configerus>=0.3.5
     pyyaml
     docker
     kubernetes==17.14.0a1
+    fire
 
 [options.packages.find]
 where=src
@@ -52,6 +53,7 @@ console_scripts=
     ucttc   = uctt_cli.entrypoint:main
 uctt.bootstrap =
     uctt_cli         = uctt_cli:bootstrap
+    uctt_validation  = uctt.validation:bootstrap
     uctt_common      = uctt.contrib.common:bootstrap
     uctt_ansible     = uctt.contrib.ansible:bootstrap
     uctt_docker      = uctt.contrib.docker:bootstrap
